Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7525,7 +7525,12 @@
       "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 90.9090909090909\tLoss: 0.388\n",
       "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 67.75568181818181\tLoss: 2.814\n",
       "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 36.07954545454545\tLoss: 11.176\n",
-      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 16.477272727272727\tLoss: 29.744\n"
+      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 16.477272727272727\tLoss: 29.744\n",
+      "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 10.9375\tLoss: 66.463\n",
+      "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 21.661931818181817\tLoss: 17.438\n",
+      "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 36.43465909090909\tLoss: 8.56\n",
+      "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 63.56534090909091\tLoss: 3.125\n",
+      "Coord: [-0.4 -0.1]\tAcc: 91\tLoss: 1.7977\r"
      ]
     }
    ],
