Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7616,7 +7616,16 @@
       "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 76.8465909090909\tLoss: 1.625\n",
       "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 55.61079545454545\tLoss: 5.3\n",
       "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 34.94318181818182\tLoss: 14.579\n",
-      "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 24.147727272727273\tLoss: 36.621\n"
+      "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 24.147727272727273\tLoss: 36.621\n",
+      "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 28.90625\tLoss: 11.406\n",
+      "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 45.24147727272727\tLoss: 5.174\n",
+      "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 69.0340909090909\tLoss: 1.95\n",
+      "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 87.92613636363636\tLoss: 0.523\n",
+      "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 97.72727272727273\tLoss: 0.069\n",
+      "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 97.65625\tLoss: 0.087\n",
+      "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 88.21022727272727\tLoss: 0.605\n",
+      "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 68.82102272727273\tLoss: 2.661\n",
+      "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 45.73863636363637\tLoss: 8.759\n"
      ]
     }
    ],
