--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7584,7 +7584,9 @@
       "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 71.73295454545455\tLoss: 2.31\n",
       "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 56.67613636363637\tLoss: 4.705\n",
       "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 38.63636363636363\tLoss: 9.978\n",
-      "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 22.727272727272727\tLoss: 21.945\n"
+      "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 22.727272727272727\tLoss: 21.945\n",
+      "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 13.423295454545455\tLoss: 44.128\n",
+      "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 21.732954545454547\tLoss: 24.087\n"
      ]
     }
    ],
