--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7530,7 +7530,11 @@
       "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 21.661931818181817\tLoss: 17.438\n",
       "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 36.43465909090909\tLoss: 8.56\n",
       "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 63.56534090909091\tLoss: 3.125\n",
-      "Coord: [-0.4 -0.1]\tAcc: 91\tLoss: 1.7977\r"
+      "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 83.80681818181819\tLoss: 0.809\n",
+      "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 96.73295454545455\tLoss: 0.111\n",
+      "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 98.22443181818181\tLoss: 0.058\n",
+      "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 86.00852272727273\tLoss: 0.754\n",
+      "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 54.04829545454545\tLoss: 5.2\n"
      ]
     }
    ],
