--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7586,7 +7586,10 @@
       "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 38.63636363636363\tLoss: 9.978\n",
       "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 22.727272727272727\tLoss: 21.945\n",
       "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 13.423295454545455\tLoss: 44.128\n",
-      "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 21.732954545454547\tLoss: 24.087\n"
+      "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 21.732954545454547\tLoss: 24.087\n",
+      "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 37.92613636363637\tLoss: 10.948\n",
+      "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 59.16193181818182\tLoss: 5.013\n",
+      "Coord: [-0.4 -0.3]\tAcc: 85\tLoss: 3.7536\r"
      ]
     }
    ],
