Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7589,7 +7589,9 @@
       "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 21.732954545454547\tLoss: 24.087\n",
       "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 37.92613636363637\tLoss: 10.948\n",
       "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 59.16193181818182\tLoss: 5.013\n",
-      "Coord: [-0.4 -0.3]\tAcc: 85\tLoss: 3.7536\r"
+      "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 76.0653409090909\tLoss: 2.398\n",
+      "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 85.6534090909091\tLoss: 1.007\n",
+      "Coord: [ 0.  -0.3]\tAcc: 112\tLoss: 0.798\r"
      ]
     }
    ],
