Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7534,7 +7534,12 @@
       "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 96.73295454545455\tLoss: 0.111\n",
       "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 98.22443181818181\tLoss: 0.058\n",
       "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 86.00852272727273\tLoss: 0.754\n",
-      "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 54.04829545454545\tLoss: 5.2\n"
+      "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 54.04829545454545\tLoss: 5.2\n",
+      "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 24.147727272727273\tLoss: 17.744\n",
+      "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 12.144886363636363\tLoss: 42.935\n",
+      "count: 210\tCoord: [-1.  0.]\t\tAcc: 18.394886363636363\tLoss: 23.92\n",
+      "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 27.485795454545453\tLoss: 12.56\n",
+      "Coord: [-0.7  0. ]\tAcc: 46\tLoss: 8.5278\r"
      ]
     }
    ],
