Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7625,7 +7625,16 @@
       "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 97.65625\tLoss: 0.087\n",
       "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 88.21022727272727\tLoss: 0.605\n",
       "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 68.82102272727273\tLoss: 2.661\n",
-      "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 45.73863636363637\tLoss: 8.759\n"
+      "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 45.73863636363637\tLoss: 8.759\n",
+      "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 30.610795454545453\tLoss: 22.429\n",
+      "count: 210\tCoord: [-1.  0.]\t\tAcc: 23.4375\tLoss: 15.917\n",
+      "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 37.5\tLoss: 7.361\n",
+      "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 57.38636363636363\tLoss: 3.183\n",
+      "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 81.10795454545455\tLoss: 0.963\n",
+      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 95.73863636363636\tLoss: 0.152\n",
+      "count: 220\tCoord: [0. 0.]\t\tAcc: 99.28977272727273\tLoss: 0.028\n",
+      "count: 222\tCoord: [0.2 0. ]\t\tAcc: 95.09943181818181\tLoss: 0.202\n",
+      "count: 224\tCoord: [0.4 0. ]\t\tAcc: 79.54545454545455\tLoss: 1.383\n"
      ]
     }
    ],
