--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7591,7 +7591,9 @@
       "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 59.16193181818182\tLoss: 5.013\n",
       "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 76.0653409090909\tLoss: 2.398\n",
       "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 85.6534090909091\tLoss: 1.007\n",
-      "Coord: [ 0.  -0.3]\tAcc: 112\tLoss: 0.798\r"
+      "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 86.64772727272727\tLoss: 0.85\n",
+      "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 74.85795454545455\tLoss: 2.02\n",
+      "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 52.69886363636363\tLoss: 5.274\n"
      ]
     }
    ],
