Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7539,7 +7539,11 @@
       "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 12.144886363636363\tLoss: 42.935\n",
       "count: 210\tCoord: [-1.  0.]\t\tAcc: 18.394886363636363\tLoss: 23.92\n",
       "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 27.485795454545453\tLoss: 12.56\n",
-      "Coord: [-0.7  0. ]\tAcc: 46\tLoss: 8.5278\r"
+      "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 50.63920454545455\tLoss: 5.13\n",
+      "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 77.6278409090909\tLoss: 1.421\n",
+      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 94.10511363636364\tLoss: 0.209\n",
+      "count: 220\tCoord: [0. 0.]\t\tAcc: 99.21875\tLoss: 0.027\n",
+      "count: 222\tCoord: [0.2 0. ]\t\tAcc: 95.8096590909091\tLoss: 0.161\n"
      ]
     }
    ],
