--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7593,7 +7593,9 @@
       "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 85.6534090909091\tLoss: 1.007\n",
       "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 86.64772727272727\tLoss: 0.85\n",
       "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 74.85795454545455\tLoss: 2.02\n",
-      "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 52.69886363636363\tLoss: 5.274\n"
+      "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 52.69886363636363\tLoss: 5.274\n",
+      "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 33.38068181818182\tLoss: 13.046\n",
+      "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 18.039772727272727\tLoss: 29.991\n"
      ]
     }
    ],
