Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7595,7 +7595,10 @@
       "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 74.85795454545455\tLoss: 2.02\n",
       "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 52.69886363636363\tLoss: 5.274\n",
       "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 33.38068181818182\tLoss: 13.046\n",
-      "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 18.039772727272727\tLoss: 29.991\n"
+      "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 18.039772727272727\tLoss: 29.991\n",
+      "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 17.897727272727273\tLoss: 31.912\n",
+      "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 30.46875\tLoss: 15.227\n",
+      "Coord: [-0.7 -0.2]\tAcc: 54\tLoss: 9.0052\r"
      ]
     }
    ],
