Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7543,7 +7543,11 @@
       "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 77.6278409090909\tLoss: 1.421\n",
       "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 94.10511363636364\tLoss: 0.209\n",
       "count: 220\tCoord: [0. 0.]\t\tAcc: 99.21875\tLoss: 0.027\n",
-      "count: 222\tCoord: [0.2 0. ]\t\tAcc: 95.8096590909091\tLoss: 0.161\n"
+      "count: 222\tCoord: [0.2 0. ]\t\tAcc: 95.8096590909091\tLoss: 0.161\n",
+      "count: 224\tCoord: [0.4 0. ]\t\tAcc: 71.09375\tLoss: 2.342\n",
+      "count: 226\tCoord: [0.6 0. ]\t\tAcc: 37.64204545454545\tLoss: 9.916\n",
+      "count: 228\tCoord: [0.8 0. ]\t\tAcc: 15.482954545454545\tLoss: 27.85\n",
+      "count: 230\tCoord: [1. 0.]\t\tAcc: 10.724431818181818\tLoss: 62.762\n"
      ]
     }
    ],
