Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7634,7 +7634,16 @@
       "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 95.73863636363636\tLoss: 0.152\n",
       "count: 220\tCoord: [0. 0.]\t\tAcc: 99.28977272727273\tLoss: 0.028\n",
       "count: 222\tCoord: [0.2 0. ]\t\tAcc: 95.09943181818181\tLoss: 0.202\n",
-      "count: 224\tCoord: [0.4 0. ]\t\tAcc: 79.54545454545455\tLoss: 1.383\n"
+      "count: 224\tCoord: [0.4 0. ]\t\tAcc: 79.54545454545455\tLoss: 1.383\n",
+      "count: 226\tCoord: [0.6 0. ]\t\tAcc: 55.18465909090909\tLoss: 5.161\n",
+      "count: 228\tCoord: [0.8 0. ]\t\tAcc: 35.58238636363637\tLoss: 14.44\n",
+      "count: 230\tCoord: [1. 0.]\t\tAcc: 23.224431818181817\tLoss: 37.077\n",
+      "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 28.480113636363637\tLoss: 10.549\n",
+      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 45.38352272727273\tLoss: 4.995\n",
+      "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 67.75568181818181\tLoss: 2.038\n",
+      "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 88.35227272727273\tLoss: 0.516\n",
+      "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 97.72727272727273\tLoss: 0.073\n",
+      "count: 242\tCoord: [0.1 0.1]\t\tAcc: 97.30113636363636\tLoss: 0.09\n"
      ]
     }
    ],
