--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7598,7 +7598,9 @@
       "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 18.039772727272727\tLoss: 29.991\n",
       "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 17.897727272727273\tLoss: 31.912\n",
       "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 30.46875\tLoss: 15.227\n",
-      "Coord: [-0.7 -0.2]\tAcc: 54\tLoss: 9.0052\r"
+      "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 51.42045454545455\tLoss: 6.287\n",
+      "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 72.79829545454545\tLoss: 2.491\n",
+      "Coord: [-0.3 -0.2]\tAcc: 112\tLoss: 1.428\r"
      ]
     }
    ],
