Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7600,7 +7600,9 @@
       "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 30.46875\tLoss: 15.227\n",
       "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 51.42045454545455\tLoss: 6.287\n",
       "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 72.79829545454545\tLoss: 2.491\n",
-      "Coord: [-0.3 -0.2]\tAcc: 112\tLoss: 1.428\r"
+      "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 87.9971590909091\tLoss: 0.696\n",
+      "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 93.39488636363636\tLoss: 0.284\n",
+      "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 88.49431818181819\tLoss: 0.594\n"
      ]
     }
    ],
