--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7547,7 +7547,12 @@
       "count: 224\tCoord: [0.4 0. ]\t\tAcc: 71.09375\tLoss: 2.342\n",
       "count: 226\tCoord: [0.6 0. ]\t\tAcc: 37.64204545454545\tLoss: 9.916\n",
       "count: 228\tCoord: [0.8 0. ]\t\tAcc: 15.482954545454545\tLoss: 27.85\n",
-      "count: 230\tCoord: [1. 0.]\t\tAcc: 10.724431818181818\tLoss: 62.762\n"
+      "count: 230\tCoord: [1. 0.]\t\tAcc: 10.724431818181818\tLoss: 62.762\n",
+      "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 22.088068181818183\tLoss: 18.152\n",
+      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 35.01420454545455\tLoss: 8.564\n",
+      "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 64.20454545454545\tLoss: 2.832\n",
+      "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 87.2159090909091\tLoss: 0.572\n",
+      "Coord: [-0.2  0.1]\tAcc: 119\tLoss: 0.163\r"
      ]
     }
    ],
