--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7602,7 +7602,9 @@
       "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 72.79829545454545\tLoss: 2.491\n",
       "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 87.9971590909091\tLoss: 0.696\n",
       "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 93.39488636363636\tLoss: 0.284\n",
-      "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 88.49431818181819\tLoss: 0.594\n"
+      "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 88.49431818181819\tLoss: 0.594\n",
+      "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 70.45454545454545\tLoss: 2.422\n",
+      "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 45.66761363636363\tLoss: 7.474\n"
      ]
     }
    ],
