--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7552,7 +7552,11 @@
       "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 35.01420454545455\tLoss: 8.564\n",
       "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 64.20454545454545\tLoss: 2.832\n",
       "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 87.2159090909091\tLoss: 0.572\n",
-      "Coord: [-0.2  0.1]\tAcc: 119\tLoss: 0.163\r"
+      "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 98.7215909090909\tLoss: 0.051\n",
+      "count: 242\tCoord: [0.1 0.1]\t\tAcc: 98.01136363636364\tLoss: 0.065\n",
+      "count: 244\tCoord: [0.3 0.1]\t\tAcc: 83.59375\tLoss: 0.998\n",
+      "count: 246\tCoord: [0.5 0.1]\t\tAcc: 51.42045454545455\tLoss: 5.923\n",
+      "count: 248\tCoord: [0.7 0.1]\t\tAcc: 23.224431818181817\tLoss: 18.312\n"
      ]
     }
    ],
