--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7643,7 +7643,22 @@
       "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 67.75568181818181\tLoss: 2.038\n",
       "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 88.35227272727273\tLoss: 0.516\n",
       "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 97.72727272727273\tLoss: 0.073\n",
-      "count: 242\tCoord: [0.1 0.1]\t\tAcc: 97.30113636363636\tLoss: 0.09\n"
+      "count: 242\tCoord: [0.1 0.1]\t\tAcc: 97.30113636363636\tLoss: 0.09\n",
+      "count: 244\tCoord: [0.3 0.1]\t\tAcc: 87.2159090909091\tLoss: 0.753\n",
+      "count: 246\tCoord: [0.5 0.1]\t\tAcc: 66.26420454545455\tLoss: 3.143\n",
+      "count: 248\tCoord: [0.7 0.1]\t\tAcc: 43.25284090909091\tLoss: 9.718\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count: 250\tCoord: [0.9 0.1]\t\tAcc: 27.84090909090909\tLoss: 23.731\n",
+      "count: 252\tCoord: [-1.   0.2]\t\tAcc: 21.946022727272727\tLoss: 15.439\n",
+      "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 34.65909090909091\tLoss: 7.615\n",
+      "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 53.90625\tLoss: 3.606\n",
+      "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 73.65056818181819\tLoss: 1.437\n",
+      "Coord: [-0.3  0.2]\tAcc: 107\tLoss: 0.754\r"
      ]
     }
    ],
