Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7604,7 +7604,10 @@
       "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 93.39488636363636\tLoss: 0.284\n",
       "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 88.49431818181819\tLoss: 0.594\n",
       "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 70.45454545454545\tLoss: 2.422\n",
-      "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 45.66761363636363\tLoss: 7.474\n"
+      "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 45.66761363636363\tLoss: 7.474\n",
+      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 24.644886363636363\tLoss: 19.093\n",
+      "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 12.926136363636363\tLoss: 42.282\n",
+      "Coord: [-1.  -0.1]\tAcc: 21\tLoss: 30.189\r"
      ]
     }
    ],
