Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7607,7 +7607,9 @@
       "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 45.66761363636363\tLoss: 7.474\n",
       "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 24.644886363636363\tLoss: 19.093\n",
       "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 12.926136363636363\tLoss: 42.282\n",
-      "Coord: [-1.  -0.1]\tAcc: 21\tLoss: 30.189\r"
+      "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 24.857954545454547\tLoss: 21.341\n",
+      "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 40.48295454545455\tLoss: 9.395\n",
+      "Coord: [-0.6 -0.1]\tAcc: 67\tLoss: 5.154\r"
      ]
     }
    ],
