--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7558,6 +7558,17 @@
       "count: 246\tCoord: [0.5 0.1]\t\tAcc: 51.42045454545455\tLoss: 5.923\n",
       "count: 248\tCoord: [0.7 0.1]\t\tAcc: 23.224431818181817\tLoss: 18.312\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count: 250\tCoord: [0.9 0.1]\t\tAcc: 11.71875\tLoss: 43.073\n",
+      "count: 252\tCoord: [-1.   0.2]\t\tAcc: 16.548295454545453\tLoss: 26.538\n",
+      "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 25.213068181818183\tLoss: 13.836\n",
+      "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 47.86931818181818\tLoss: 5.596\n",
+      "Coord: [-0.5  0.2]\tAcc: 79\tLoss: 3.371\r"
+     ]
     }
    ],
    "source": [
