--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7609,7 +7609,9 @@
       "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 12.926136363636363\tLoss: 42.282\n",
       "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 24.857954545454547\tLoss: 21.341\n",
       "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 40.48295454545455\tLoss: 9.395\n",
-      "Coord: [-0.6 -0.1]\tAcc: 67\tLoss: 5.154\r"
+      "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 65.69602272727273\tLoss: 3.339\n",
+      "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 86.07954545454545\tLoss: 0.833\n",
+      "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 96.5909090909091\tLoss: 0.123\n"
      ]
     }
    ],
