--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7567,7 +7567,11 @@
       "count: 252\tCoord: [-1.   0.2]\t\tAcc: 16.548295454545453\tLoss: 26.538\n",
       "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 25.213068181818183\tLoss: 13.836\n",
       "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 47.86931818181818\tLoss: 5.596\n",
-      "Coord: [-0.5  0.2]\tAcc: 79\tLoss: 3.371\r"
+      "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 74.7159090909091\tLoss: 1.575\n",
+      "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 92.25852272727273\tLoss: 0.327\n",
+      "count: 262\tCoord: [0.  0.2]\t\tAcc: 96.09375\tLoss: 0.125\n",
+      "count: 264\tCoord: [0.2 0.2]\t\tAcc: 88.92045454545455\tLoss: 0.605\n",
+      "Coord: [0.3 0.2]\tAcc: 101\tLoss: 1.699\r"
      ]
     }
    ],
