Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7658,7 +7658,16 @@
       "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 34.65909090909091\tLoss: 7.615\n",
       "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 53.90625\tLoss: 3.606\n",
       "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 73.65056818181819\tLoss: 1.437\n",
-      "Coord: [-0.3  0.2]\tAcc: 107\tLoss: 0.754\r"
+      "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 91.33522727272727\tLoss: 0.329\n",
+      "count: 262\tCoord: [0.  0.2]\t\tAcc: 96.66193181818181\tLoss: 0.136\n",
+      "count: 264\tCoord: [0.2 0.2]\t\tAcc: 90.48295454545455\tLoss: 0.508\n",
+      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 73.9346590909091\tLoss: 2.075\n",
+      "count: 268\tCoord: [0.6 0.2]\t\tAcc: 49.14772727272727\tLoss: 6.607\n",
+      "count: 270\tCoord: [0.8 0.2]\t\tAcc: 32.45738636363637\tLoss: 16.425\n",
+      "count: 272\tCoord: [1.  0.2]\t\tAcc: 20.738636363636363\tLoss: 44.281\n",
+      "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 25.78125\tLoss: 11.49\n",
+      "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 40.83806818181818\tLoss: 6.073\n",
+      "Coord: [-0.6  0.3]\tAcc: 62\tLoss: 4.519\r"
      ]
     }
    ],
