--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7611,7 +7611,9 @@
       "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 40.48295454545455\tLoss: 9.395\n",
       "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 65.69602272727273\tLoss: 3.339\n",
       "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 86.07954545454545\tLoss: 0.833\n",
-      "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 96.5909090909091\tLoss: 0.123\n"
+      "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 96.5909090909091\tLoss: 0.123\n",
+      "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 96.51988636363636\tLoss: 0.128\n",
+      "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 84.80113636363636\tLoss: 0.861\n"
      ]
     }
    ],
