Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7571,7 +7571,11 @@
       "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 92.25852272727273\tLoss: 0.327\n",
       "count: 262\tCoord: [0.  0.2]\t\tAcc: 96.09375\tLoss: 0.125\n",
       "count: 264\tCoord: [0.2 0.2]\t\tAcc: 88.92045454545455\tLoss: 0.605\n",
-      "Coord: [0.3 0.2]\tAcc: 101\tLoss: 1.699\r"
+      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 61.29261363636363\tLoss: 3.677\n",
+      "count: 268\tCoord: [0.6 0.2]\t\tAcc: 31.818181818181817\tLoss: 12.733\n",
+      "count: 270\tCoord: [0.8 0.2]\t\tAcc: 15.838068181818182\tLoss: 30.871\n",
+      "count: 272\tCoord: [1.  0.2]\t\tAcc: 10.653409090909092\tLoss: 65.624\n",
+      "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 17.1875\tLoss: 21.653\n"
      ]
     }
    ],
