Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7613,7 +7613,10 @@
       "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 86.07954545454545\tLoss: 0.833\n",
       "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 96.5909090909091\tLoss: 0.123\n",
       "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 96.51988636363636\tLoss: 0.128\n",
-      "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 84.80113636363636\tLoss: 0.861\n"
+      "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 84.80113636363636\tLoss: 0.861\n",
+      "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 60.58238636363637\tLoss: 3.828\n",
+      "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 34.51704545454545\tLoss: 11.685\n",
+      "Coord: [ 0.8 -0.1]\tAcc: 22\tLoss: 20.827\r"
      ]
     }
    ],
