--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7616,7 +7616,9 @@
       "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 84.80113636363636\tLoss: 0.861\n",
       "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 60.58238636363637\tLoss: 3.828\n",
       "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 34.51704545454545\tLoss: 11.685\n",
-      "Coord: [ 0.8 -0.1]\tAcc: 22\tLoss: 20.827\r"
+      "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 16.90340909090909\tLoss: 29.333\n",
+      "count: 210\tCoord: [-1.  0.]\t\tAcc: 19.957386363636363\tLoss: 29.654\n",
+      "Coord: [-0.9  0. ]\tAcc: 35\tLoss: 20.059\r"
      ]
     }
    ],
