--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7575,7 +7575,12 @@
       "count: 268\tCoord: [0.6 0.2]\t\tAcc: 31.818181818181817\tLoss: 12.733\n",
       "count: 270\tCoord: [0.8 0.2]\t\tAcc: 15.838068181818182\tLoss: 30.871\n",
       "count: 272\tCoord: [1.  0.2]\t\tAcc: 10.653409090909092\tLoss: 65.624\n",
-      "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 17.1875\tLoss: 21.653\n"
+      "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 17.1875\tLoss: 21.653\n",
+      "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 30.75284090909091\tLoss: 10.223\n",
+      "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 57.52840909090909\tLoss: 3.708\n",
+      "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 79.04829545454545\tLoss: 1.152\n",
+      "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 90.83806818181819\tLoss: 0.424\n",
+      "Coord: [0.  0.3]\tAcc: 116\tLoss: 0.541\r"
      ]
     }
    ],
