Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7667,7 +7667,16 @@
       "count: 272\tCoord: [1.  0.2]\t\tAcc: 20.738636363636363\tLoss: 44.281\n",
       "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 25.78125\tLoss: 11.49\n",
       "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 40.83806818181818\tLoss: 6.073\n",
-      "Coord: [-0.6  0.3]\tAcc: 62\tLoss: 4.519\r"
+      "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 59.87215909090909\tLoss: 2.848\n",
+      "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 77.91193181818181\tLoss: 1.098\n",
+      "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 89.3465909090909\tLoss: 0.425\n",
+      "count: 284\tCoord: [0.1 0.3]\t\tAcc: 89.3465909090909\tLoss: 0.523\n",
+      "count: 286\tCoord: [0.3 0.3]\t\tAcc: 77.91193181818181\tLoss: 1.609\n",
+      "count: 288\tCoord: [0.5 0.3]\t\tAcc: 55.32670454545455\tLoss: 4.583\n",
+      "count: 290\tCoord: [0.7 0.3]\t\tAcc: 37.14488636363637\tLoss: 11.842\n",
+      "count: 292\tCoord: [0.9 0.3]\t\tAcc: 23.295454545454547\tLoss: 29.589\n",
+      "count: 294\tCoord: [-1.   0.4]\t\tAcc: 19.602272727272727\tLoss: 17.932\n",
+      "Coord: [-0.9  0.4]\tAcc: 25\tLoss: 14.801\r"
      ]
     }
    ],
