--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7618,7 +7618,9 @@
       "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 34.51704545454545\tLoss: 11.685\n",
       "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 16.90340909090909\tLoss: 29.333\n",
       "count: 210\tCoord: [-1.  0.]\t\tAcc: 19.957386363636363\tLoss: 29.654\n",
-      "Coord: [-0.9  0. ]\tAcc: 35\tLoss: 20.059\r"
+      "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 32.59943181818182\tLoss: 14.385\n",
+      "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 53.40909090909091\tLoss: 5.493\n",
+      "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 77.20170454545455\tLoss: 1.592\n"
      ]
     }
    ],
