Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7620,7 +7620,9 @@
       "count: 210\tCoord: [-1.  0.]\t\tAcc: 19.957386363636363\tLoss: 29.654\n",
       "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 32.59943181818182\tLoss: 14.385\n",
       "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 53.40909090909091\tLoss: 5.493\n",
-      "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 77.20170454545455\tLoss: 1.592\n"
+      "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 77.20170454545455\tLoss: 1.592\n",
+      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 94.53125\tLoss: 0.207\n",
+      "count: 220\tCoord: [0. 0.]\t\tAcc: 98.57954545454545\tLoss: 0.043\n"
      ]
     }
    ],
