--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7580,7 +7580,11 @@
       "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 57.52840909090909\tLoss: 3.708\n",
       "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 79.04829545454545\tLoss: 1.152\n",
       "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 90.83806818181819\tLoss: 0.424\n",
-      "Coord: [0.  0.3]\tAcc: 116\tLoss: 0.541\r"
+      "count: 284\tCoord: [0.1 0.3]\t\tAcc: 86.93181818181819\tLoss: 0.733\n",
+      "count: 286\tCoord: [0.3 0.3]\t\tAcc: 70.17045454545455\tLoss: 2.554\n",
+      "count: 288\tCoord: [0.5 0.3]\t\tAcc: 39.77272727272727\tLoss: 9.489\n",
+      "count: 290\tCoord: [0.7 0.3]\t\tAcc: 19.176136363636363\tLoss: 23.854\n",
+      "count: 292\tCoord: [0.9 0.3]\t\tAcc: 11.363636363636363\tLoss: 49.392\n"
      ]
     }
    ],
