Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7622,7 +7622,10 @@
       "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 53.40909090909091\tLoss: 5.493\n",
       "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 77.20170454545455\tLoss: 1.592\n",
       "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 94.53125\tLoss: 0.207\n",
-      "count: 220\tCoord: [0. 0.]\t\tAcc: 98.57954545454545\tLoss: 0.043\n"
+      "count: 220\tCoord: [0. 0.]\t\tAcc: 98.57954545454545\tLoss: 0.043\n",
+      "count: 222\tCoord: [0.2 0. ]\t\tAcc: 93.60795454545455\tLoss: 0.249\n",
+      "count: 224\tCoord: [0.4 0. ]\t\tAcc: 74.92897727272727\tLoss: 1.867\n",
+      "Coord: [0.5 0. ]\tAcc: 73\tLoss: 4.174\r"
      ]
     }
    ],
