Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7584,7 +7584,12 @@
       "count: 286\tCoord: [0.3 0.3]\t\tAcc: 70.17045454545455\tLoss: 2.554\n",
       "count: 288\tCoord: [0.5 0.3]\t\tAcc: 39.77272727272727\tLoss: 9.489\n",
       "count: 290\tCoord: [0.7 0.3]\t\tAcc: 19.176136363636363\tLoss: 23.854\n",
-      "count: 292\tCoord: [0.9 0.3]\t\tAcc: 11.363636363636363\tLoss: 49.392\n"
+      "count: 292\tCoord: [0.9 0.3]\t\tAcc: 11.363636363636363\tLoss: 49.392\n",
+      "count: 294\tCoord: [-1.   0.4]\t\tAcc: 12.571022727272727\tLoss: 33.21\n",
+      "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 21.661931818181817\tLoss: 16.816\n",
+      "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 39.13352272727273\tLoss: 7.24\n",
+      "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 62.5\tLoss: 2.979\n",
+      "Coord: [-0.3  0.4]\tAcc: 94\tLoss: 2.008\r"
      ]
     }
    ],
