Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7589,7 +7589,11 @@
       "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 21.661931818181817\tLoss: 16.816\n",
       "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 39.13352272727273\tLoss: 7.24\n",
       "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 62.5\tLoss: 2.979\n",
-      "Coord: [-0.3  0.4]\tAcc: 94\tLoss: 2.008\r"
+      "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 79.04829545454545\tLoss: 1.255\n",
+      "count: 304\tCoord: [0.  0.4]\t\tAcc: 80.68181818181819\tLoss: 1.228\n",
+      "count: 306\tCoord: [0.2 0.4]\t\tAcc: 69.38920454545455\tLoss: 2.671\n",
+      "count: 308\tCoord: [0.4 0.4]\t\tAcc: 44.67329545454545\tLoss: 7.461\n",
+      "count: 310\tCoord: [0.6 0.4]\t\tAcc: 22.585227272727273\tLoss: 19.532\n"
      ]
     }
    ],
