--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7627,7 +7627,9 @@
       "count: 224\tCoord: [0.4 0. ]\t\tAcc: 74.92897727272727\tLoss: 1.867\n",
       "count: 226\tCoord: [0.6 0. ]\t\tAcc: 46.73295454545455\tLoss: 7.204\n",
       "count: 228\tCoord: [0.8 0. ]\t\tAcc: 22.585227272727273\tLoss: 20.17\n",
-      "Coord: [0.9 0. ]\tAcc: 16\tLoss: 33.044\r"
+      "count: 230\tCoord: [1. 0.]\t\tAcc: 11.576704545454545\tLoss: 45.137\n",
+      "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 27.201704545454547\tLoss: 20.779\n",
+      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 41.54829545454545\tLoss: 9.243\n"
      ]
     }
    ],
