Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7629,7 +7629,9 @@
       "count: 228\tCoord: [0.8 0. ]\t\tAcc: 22.585227272727273\tLoss: 20.17\n",
       "count: 230\tCoord: [1. 0.]\t\tAcc: 11.576704545454545\tLoss: 45.137\n",
       "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 27.201704545454547\tLoss: 20.779\n",
-      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 41.54829545454545\tLoss: 9.243\n"
+      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 41.54829545454545\tLoss: 9.243\n",
+      "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 65.1278409090909\tLoss: 3.355\n",
+      "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 86.57670454545455\tLoss: 0.732\n"
      ]
     }
    ],
