Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7593,7 +7593,11 @@
       "count: 304\tCoord: [0.  0.4]\t\tAcc: 80.68181818181819\tLoss: 1.228\n",
       "count: 306\tCoord: [0.2 0.4]\t\tAcc: 69.38920454545455\tLoss: 2.671\n",
       "count: 308\tCoord: [0.4 0.4]\t\tAcc: 44.67329545454545\tLoss: 7.461\n",
-      "count: 310\tCoord: [0.6 0.4]\t\tAcc: 22.585227272727273\tLoss: 19.532\n"
+      "count: 310\tCoord: [0.6 0.4]\t\tAcc: 22.585227272727273\tLoss: 19.532\n",
+      "count: 312\tCoord: [0.8 0.4]\t\tAcc: 12.926136363636363\tLoss: 40.247\n",
+      "count: 314\tCoord: [1.  0.4]\t\tAcc: 9.801136363636363\tLoss: 81.683\n",
+      "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 14.914772727272727\tLoss: 26.735\n",
+      "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 25.426136363636363\tLoss: 12.851\n"
      ]
     }
    ],
