Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7684,7 +7684,16 @@
       "count: 306\tCoord: [0.2 0.4]\t\tAcc: 75.42613636363636\tLoss: 1.595\n",
       "count: 308\tCoord: [0.4 0.4]\t\tAcc: 60.86647727272727\tLoss: 3.613\n",
       "count: 310\tCoord: [0.6 0.4]\t\tAcc: 41.19318181818182\tLoss: 9.045\n",
-      "count: 312\tCoord: [0.8 0.4]\t\tAcc: 27.911931818181817\tLoss: 21.422\n"
+      "count: 312\tCoord: [0.8 0.4]\t\tAcc: 27.911931818181817\tLoss: 21.422\n",
+      "count: 314\tCoord: [1.  0.4]\t\tAcc: 18.323863636363637\tLoss: 58.053\n",
+      "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 22.37215909090909\tLoss: 14.48\n",
+      "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 32.45738636363637\tLoss: 8.522\n",
+      "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 45.59659090909091\tLoss: 4.6\n",
+      "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 60.65340909090909\tLoss: 2.594\n",
+      "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 68.75\tLoss: 1.776\n",
+      "count: 326\tCoord: [0.1 0.5]\t\tAcc: 68.89204545454545\tLoss: 1.974\n",
+      "count: 328\tCoord: [0.3 0.5]\t\tAcc: 59.44602272727273\tLoss: 3.528\n",
+      "count: 330\tCoord: [0.5 0.5]\t\tAcc: 44.24715909090909\tLoss: 7.607\n"
      ]
     }
    ],
