Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7631,7 +7631,10 @@
       "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 27.201704545454547\tLoss: 20.779\n",
       "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 41.54829545454545\tLoss: 9.243\n",
       "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 65.1278409090909\tLoss: 3.355\n",
-      "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 86.57670454545455\tLoss: 0.732\n"
+      "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 86.57670454545455\tLoss: 0.732\n",
+      "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 97.08806818181819\tLoss: 0.105\n",
+      "count: 242\tCoord: [0.1 0.1]\t\tAcc: 97.3721590909091\tLoss: 0.11\n",
+      "Coord: [0.2 0.1]\tAcc: 115\tLoss: 0.437\r"
      ]
     }
    ],
