Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7634,7 +7634,9 @@
       "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 86.57670454545455\tLoss: 0.732\n",
       "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 97.08806818181819\tLoss: 0.105\n",
       "count: 242\tCoord: [0.1 0.1]\t\tAcc: 97.3721590909091\tLoss: 0.11\n",
-      "Coord: [0.2 0.1]\tAcc: 115\tLoss: 0.437\r"
+      "count: 244\tCoord: [0.3 0.1]\t\tAcc: 84.58806818181819\tLoss: 0.898\n",
+      "count: 246\tCoord: [0.5 0.1]\t\tAcc: 58.16761363636363\tLoss: 4.476\n",
+      "Coord: [0.6 0.1]\tAcc: 47\tLoss: 9.422\r"
      ]
     }
    ],
