--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7597,7 +7597,12 @@
       "count: 312\tCoord: [0.8 0.4]\t\tAcc: 12.926136363636363\tLoss: 40.247\n",
       "count: 314\tCoord: [1.  0.4]\t\tAcc: 9.801136363636363\tLoss: 81.683\n",
       "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 14.914772727272727\tLoss: 26.735\n",
-      "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 25.426136363636363\tLoss: 12.851\n"
+      "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 25.426136363636363\tLoss: 12.851\n",
+      "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 44.24715909090909\tLoss: 5.968\n",
+      "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 62.21590909090909\tLoss: 2.961\n",
+      "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 70.3125\tLoss: 2.14\n",
+      "count: 326\tCoord: [0.1 0.5]\t\tAcc: 63.06818181818182\tLoss: 3.407\n",
+      "Coord: [0.2 0.5]\tAcc: 74\tLoss: 4.861\r"
      ]
     }
    ],
