Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7636,7 +7636,15 @@
       "count: 242\tCoord: [0.1 0.1]\t\tAcc: 97.3721590909091\tLoss: 0.11\n",
       "count: 244\tCoord: [0.3 0.1]\t\tAcc: 84.58806818181819\tLoss: 0.898\n",
       "count: 246\tCoord: [0.5 0.1]\t\tAcc: 58.16761363636363\tLoss: 4.476\n",
-      "Coord: [0.6 0.1]\tAcc: 47\tLoss: 9.422\r"
+      "count: 248\tCoord: [0.7 0.1]\t\tAcc: 30.397727272727273\tLoss: 14.24\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count: 250\tCoord: [0.9 0.1]\t\tAcc: 13.28125\tLoss: 34.189\n",
+      "count: 252\tCoord: [-1.   0.2]\t\tAcc: 19.957386363636363\tLoss: 29.844\n"
      ]
     }
    ],
