--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7602,7 +7602,11 @@
       "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 62.21590909090909\tLoss: 2.961\n",
       "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 70.3125\tLoss: 2.14\n",
       "count: 326\tCoord: [0.1 0.5]\t\tAcc: 63.06818181818182\tLoss: 3.407\n",
-      "Coord: [0.2 0.5]\tAcc: 74\tLoss: 4.861\r"
+      "count: 328\tCoord: [0.3 0.5]\t\tAcc: 45.38352272727273\tLoss: 7.103\n",
+      "count: 330\tCoord: [0.5 0.5]\t\tAcc: 26.917613636363637\tLoss: 16.041\n",
+      "count: 332\tCoord: [0.7 0.5]\t\tAcc: 15.127840909090908\tLoss: 34.79\n",
+      "count: 334\tCoord: [0.9 0.5]\t\tAcc: 10.15625\tLoss: 66.828\n",
+      "count: 336\tCoord: [-1.   0.6]\t\tAcc: 11.576704545454545\tLoss: 42.988\n"
      ]
     }
    ],
