--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7693,7 +7693,16 @@
       "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 68.75\tLoss: 1.776\n",
       "count: 326\tCoord: [0.1 0.5]\t\tAcc: 68.89204545454545\tLoss: 1.974\n",
       "count: 328\tCoord: [0.3 0.5]\t\tAcc: 59.44602272727273\tLoss: 3.528\n",
-      "count: 330\tCoord: [0.5 0.5]\t\tAcc: 44.24715909090909\tLoss: 7.607\n"
+      "count: 330\tCoord: [0.5 0.5]\t\tAcc: 44.24715909090909\tLoss: 7.607\n",
+      "count: 332\tCoord: [0.7 0.5]\t\tAcc: 30.539772727272727\tLoss: 16.827\n",
+      "count: 334\tCoord: [0.9 0.5]\t\tAcc: 20.667613636363637\tLoss: 41.84\n",
+      "count: 336\tCoord: [-1.   0.6]\t\tAcc: 17.1875\tLoss: 23.403\n",
+      "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 24.857954545454547\tLoss: 13.286\n",
+      "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 32.31534090909091\tLoss: 8.095\n",
+      "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 44.38920454545455\tLoss: 5.037\n",
+      "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 54.19034090909091\tLoss: 3.445\n",
+      "count: 346\tCoord: [0.  0.6]\t\tAcc: 57.59943181818182\tLoss: 3.088\n",
+      "Coord: [0.1 0.6]\tAcc: 73\tLoss: 3.477\r"
      ]
     }
    ],
