Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7644,7 +7644,9 @@
      "output_type": "stream",
      "text": [
       "count: 250\tCoord: [0.9 0.1]\t\tAcc: 13.28125\tLoss: 34.189\n",
-      "count: 252\tCoord: [-1.   0.2]\t\tAcc: 19.957386363636363\tLoss: 29.844\n"
+      "count: 252\tCoord: [-1.   0.2]\t\tAcc: 19.957386363636363\tLoss: 29.844\n",
+      "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 33.45170454545455\tLoss: 14.72\n",
+      "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 50.85227272727273\tLoss: 6.428\n"
      ]
     }
    ],
