--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7606,7 +7606,12 @@
       "count: 330\tCoord: [0.5 0.5]\t\tAcc: 26.917613636363637\tLoss: 16.041\n",
       "count: 332\tCoord: [0.7 0.5]\t\tAcc: 15.127840909090908\tLoss: 34.79\n",
       "count: 334\tCoord: [0.9 0.5]\t\tAcc: 10.15625\tLoss: 66.828\n",
-      "count: 336\tCoord: [-1.   0.6]\t\tAcc: 11.576704545454545\tLoss: 42.988\n"
+      "count: 336\tCoord: [-1.   0.6]\t\tAcc: 11.576704545454545\tLoss: 42.988\n",
+      "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 17.68465909090909\tLoss: 21.141\n",
+      "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 28.551136363636363\tLoss: 10.896\n",
+      "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 45.88068181818182\tLoss: 5.89\n",
+      "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 56.46306818181818\tLoss: 3.928\n",
+      "Coord: [-0.1  0.6]\tAcc: 72\tLoss: 4.041\r"
      ]
     }
    ],
