--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7646,7 +7646,10 @@
       "count: 250\tCoord: [0.9 0.1]\t\tAcc: 13.28125\tLoss: 34.189\n",
       "count: 252\tCoord: [-1.   0.2]\t\tAcc: 19.957386363636363\tLoss: 29.844\n",
       "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 33.45170454545455\tLoss: 14.72\n",
-      "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 50.85227272727273\tLoss: 6.428\n"
+      "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 50.85227272727273\tLoss: 6.428\n",
+      "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 71.66193181818181\tLoss: 2.264\n",
+      "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 89.70170454545455\tLoss: 0.505\n",
+      "Coord: [-0.1  0.2]\tAcc: 120\tLoss: 0.456\r"
      ]
     }
    ],
