Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7649,7 +7649,9 @@
       "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 50.85227272727273\tLoss: 6.428\n",
       "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 71.66193181818181\tLoss: 2.264\n",
       "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 89.70170454545455\tLoss: 0.505\n",
-      "Coord: [-0.1  0.2]\tAcc: 120\tLoss: 0.456\r"
+      "count: 262\tCoord: [0.  0.2]\t\tAcc: 94.95738636363636\tLoss: 0.209\n",
+      "count: 264\tCoord: [0.2 0.2]\t\tAcc: 89.63068181818181\tLoss: 0.58\n",
+      "Coord: [0.3 0.2]\tAcc: 102\tLoss: 1.511\r"
      ]
     }
    ],
