Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7611,7 +7611,11 @@
       "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 28.551136363636363\tLoss: 10.896\n",
       "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 45.88068181818182\tLoss: 5.89\n",
       "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 56.46306818181818\tLoss: 3.928\n",
-      "Coord: [-0.1  0.6]\tAcc: 72\tLoss: 4.041\r"
+      "count: 346\tCoord: [0.  0.6]\t\tAcc: 56.46306818181818\tLoss: 4.628\n",
+      "count: 348\tCoord: [0.2 0.6]\t\tAcc: 42.25852272727273\tLoss: 7.832\n",
+      "count: 350\tCoord: [0.4 0.6]\t\tAcc: 28.196022727272727\tLoss: 14.24\n",
+      "count: 352\tCoord: [0.6 0.6]\t\tAcc: 16.264204545454547\tLoss: 28.941\n",
+      "Coord: [0.7 0.6]\tAcc: 15\tLoss: 42.637\r"
      ]
     }
    ],
