Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7702,7 +7702,16 @@
       "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 44.38920454545455\tLoss: 5.037\n",
       "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 54.19034090909091\tLoss: 3.445\n",
       "count: 346\tCoord: [0.  0.6]\t\tAcc: 57.59943181818182\tLoss: 3.088\n",
-      "Coord: [0.1 0.6]\tAcc: 73\tLoss: 3.477\r"
+      "count: 348\tCoord: [0.2 0.6]\t\tAcc: 54.04829545454545\tLoss: 4.109\n",
+      "count: 350\tCoord: [0.4 0.6]\t\tAcc: 45.24147727272727\tLoss: 7.021\n",
+      "count: 352\tCoord: [0.6 0.6]\t\tAcc: 32.59943181818182\tLoss: 14.511\n",
+      "count: 354\tCoord: [0.8 0.6]\t\tAcc: 22.443181818181817\tLoss: 32.943\n",
+      "count: 356\tCoord: [1.  0.6]\t\tAcc: 17.258522727272727\tLoss: 87.537\n",
+      "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 17.96875\tLoss: 21.969\n",
+      "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 24.644886363636363\tLoss: 13.163\n",
+      "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 30.397727272727273\tLoss: 8.881\n",
+      "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 39.91477272727273\tLoss: 6.303\n",
+      "Coord: [-0.2  0.7]\tAcc: 54\tLoss: 6.184\r"
      ]
     }
    ],
