--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7651,7 +7651,9 @@
       "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 89.70170454545455\tLoss: 0.505\n",
       "count: 262\tCoord: [0.  0.2]\t\tAcc: 94.95738636363636\tLoss: 0.209\n",
       "count: 264\tCoord: [0.2 0.2]\t\tAcc: 89.63068181818181\tLoss: 0.58\n",
-      "Coord: [0.3 0.2]\tAcc: 102\tLoss: 1.511\r"
+      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 66.9034090909091\tLoss: 2.93\n",
+      "count: 268\tCoord: [0.6 0.2]\t\tAcc: 36.29261363636363\tLoss: 10.591\n",
+      "count: 270\tCoord: [0.8 0.2]\t\tAcc: 16.477272727272727\tLoss: 26.718\n"
      ]
     }
    ],
