Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7653,7 +7653,9 @@
       "count: 264\tCoord: [0.2 0.2]\t\tAcc: 89.63068181818181\tLoss: 0.58\n",
       "count: 266\tCoord: [0.4 0.2]\t\tAcc: 66.9034090909091\tLoss: 2.93\n",
       "count: 268\tCoord: [0.6 0.2]\t\tAcc: 36.29261363636363\tLoss: 10.591\n",
-      "count: 270\tCoord: [0.8 0.2]\t\tAcc: 16.477272727272727\tLoss: 26.718\n"
+      "count: 270\tCoord: [0.8 0.2]\t\tAcc: 16.477272727272727\tLoss: 26.718\n",
+      "count: 272\tCoord: [1.  0.2]\t\tAcc: 10.15625\tLoss: 52.458\n",
+      "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 25.710227272727273\tLoss: 21.924\n"
      ]
     }
    ],
