--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7615,7 +7615,11 @@
       "count: 348\tCoord: [0.2 0.6]\t\tAcc: 42.25852272727273\tLoss: 7.832\n",
       "count: 350\tCoord: [0.4 0.6]\t\tAcc: 28.196022727272727\tLoss: 14.24\n",
       "count: 352\tCoord: [0.6 0.6]\t\tAcc: 16.264204545454547\tLoss: 28.941\n",
-      "Coord: [0.7 0.6]\tAcc: 15\tLoss: 42.637\r"
+      "count: 354\tCoord: [0.8 0.6]\t\tAcc: 10.866477272727273\tLoss: 58.083\n",
+      "count: 356\tCoord: [1.  0.6]\t\tAcc: 9.517045454545455\tLoss: 113.174\n",
+      "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 13.636363636363637\tLoss: 34.946\n",
+      "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 19.886363636363637\tLoss: 18.259\n",
+      "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 31.178977272727273\tLoss: 10.477\n"
      ]
     }
    ],
