--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7655,7 +7655,10 @@
       "count: 268\tCoord: [0.6 0.2]\t\tAcc: 36.29261363636363\tLoss: 10.591\n",
       "count: 270\tCoord: [0.8 0.2]\t\tAcc: 16.477272727272727\tLoss: 26.718\n",
       "count: 272\tCoord: [1.  0.2]\t\tAcc: 10.15625\tLoss: 52.458\n",
-      "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 25.710227272727273\tLoss: 21.924\n"
+      "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 25.710227272727273\tLoss: 21.924\n",
+      "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 40.05681818181818\tLoss: 10.973\n",
+      "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 55.96590909090909\tLoss: 5.12\n",
+      "Coord: [-0.4  0.3]\tAcc: 89\tLoss: 3.177\r"
      ]
     }
    ],
