Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7619,7 +7619,12 @@
       "count: 356\tCoord: [1.  0.6]\t\tAcc: 9.517045454545455\tLoss: 113.174\n",
       "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 13.636363636363637\tLoss: 34.946\n",
       "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 19.886363636363637\tLoss: 18.259\n",
-      "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 31.178977272727273\tLoss: 10.477\n"
+      "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 31.178977272727273\tLoss: 10.477\n",
+      "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 42.54261363636363\tLoss: 6.856\n",
+      "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 45.80965909090909\tLoss: 6.391\n",
+      "count: 368\tCoord: [0.1 0.7]\t\tAcc: 38.35227272727273\tLoss: 9.504\n",
+      "count: 370\tCoord: [0.3 0.7]\t\tAcc: 25.923295454545453\tLoss: 15.211\n",
+      "Coord: [0.4 0.7]\tAcc: 23\tLoss: 19.387\r"
      ]
     }
    ],
