Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7711,7 +7711,16 @@
       "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 24.644886363636363\tLoss: 13.163\n",
       "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 30.397727272727273\tLoss: 8.881\n",
       "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 39.91477272727273\tLoss: 6.303\n",
-      "Coord: [-0.2  0.7]\tAcc: 54\tLoss: 6.184\r"
+      "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 46.16477272727273\tLoss: 5.346\n",
+      "count: 368\tCoord: [0.1 0.7]\t\tAcc: 45.80965909090909\tLoss: 5.633\n",
+      "count: 370\tCoord: [0.3 0.7]\t\tAcc: 41.54829545454545\tLoss: 7.315\n",
+      "count: 372\tCoord: [0.5 0.7]\t\tAcc: 33.52272727272727\tLoss: 13.394\n",
+      "count: 374\tCoord: [0.7 0.7]\t\tAcc: 24.076704545454547\tLoss: 28.022\n",
+      "count: 376\tCoord: [0.9 0.7]\t\tAcc: 18.536931818181817\tLoss: 67.053\n",
+      "count: 378\tCoord: [-1.   0.8]\t\tAcc: 15.411931818181818\tLoss: 37.637\n",
+      "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 19.886363636363637\tLoss: 21.63\n",
+      "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 22.94034090909091\tLoss: 14.65\n",
+      "Coord: [-0.5  0.8]\tAcc: 35\tLoss: 12.514\r"
      ]
     }
    ],
