Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7658,7 +7658,9 @@
       "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 25.710227272727273\tLoss: 21.924\n",
       "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 40.05681818181818\tLoss: 10.973\n",
       "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 55.96590909090909\tLoss: 5.12\n",
-      "Coord: [-0.4  0.3]\tAcc: 89\tLoss: 3.177\r"
+      "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 73.50852272727273\tLoss: 1.968\n",
+      "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 85.86647727272727\tLoss: 0.739\n",
+      "Coord: [0.  0.3]\tAcc: 112\tLoss: 0.788\r"
      ]
     }
    ],
