--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7624,7 +7624,11 @@
       "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 45.80965909090909\tLoss: 6.391\n",
       "count: 368\tCoord: [0.1 0.7]\t\tAcc: 38.35227272727273\tLoss: 9.504\n",
       "count: 370\tCoord: [0.3 0.7]\t\tAcc: 25.923295454545453\tLoss: 15.211\n",
-      "Coord: [0.4 0.7]\tAcc: 23\tLoss: 19.387\r"
+      "count: 372\tCoord: [0.5 0.7]\t\tAcc: 17.1875\tLoss: 25.37\n",
+      "count: 374\tCoord: [0.7 0.7]\t\tAcc: 11.789772727272727\tLoss: 50.509\n",
+      "count: 376\tCoord: [0.9 0.7]\t\tAcc: 9.588068181818182\tLoss: 98.469\n",
+      "count: 378\tCoord: [-1.   0.8]\t\tAcc: 11.292613636363637\tLoss: 61.755\n",
+      "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 15.553977272727273\tLoss: 29.627\n"
      ]
     }
    ],
