--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7660,7 +7660,9 @@
       "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 55.96590909090909\tLoss: 5.12\n",
       "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 73.50852272727273\tLoss: 1.968\n",
       "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 85.86647727272727\tLoss: 0.739\n",
-      "Coord: [0.  0.3]\tAcc: 112\tLoss: 0.788\r"
+      "count: 284\tCoord: [0.1 0.3]\t\tAcc: 86.00852272727273\tLoss: 0.767\n",
+      "count: 286\tCoord: [0.3 0.3]\t\tAcc: 69.67329545454545\tLoss: 2.456\n",
+      "Coord: [0.5 0.3]\tAcc: 58\tLoss: 8.255\r"
      ]
     }
    ],
