--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7662,7 +7662,9 @@
       "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 85.86647727272727\tLoss: 0.739\n",
       "count: 284\tCoord: [0.1 0.3]\t\tAcc: 86.00852272727273\tLoss: 0.767\n",
       "count: 286\tCoord: [0.3 0.3]\t\tAcc: 69.67329545454545\tLoss: 2.456\n",
-      "Coord: [0.5 0.3]\tAcc: 58\tLoss: 8.255\r"
+      "count: 288\tCoord: [0.5 0.3]\t\tAcc: 41.54829545454545\tLoss: 8.387\n",
+      "count: 290\tCoord: [0.7 0.3]\t\tAcc: 20.454545454545453\tLoss: 22.251\n",
+      "count: 292\tCoord: [0.9 0.3]\t\tAcc: 11.150568181818182\tLoss: 44.157\n"
      ]
     }
    ],
