Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7628,7 +7628,11 @@
       "count: 374\tCoord: [0.7 0.7]\t\tAcc: 11.789772727272727\tLoss: 50.509\n",
       "count: 376\tCoord: [0.9 0.7]\t\tAcc: 9.588068181818182\tLoss: 98.469\n",
       "count: 378\tCoord: [-1.   0.8]\t\tAcc: 11.292613636363637\tLoss: 61.755\n",
-      "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 15.553977272727273\tLoss: 29.627\n"
+      "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 15.553977272727273\tLoss: 29.627\n",
+      "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 21.803977272727273\tLoss: 17.658\n",
+      "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 30.46875\tLoss: 11.264\n",
+      "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 35.72443181818182\tLoss: 9.382\n",
+      "count: 388\tCoord: [0.  0.8]\t\tAcc: 32.67045454545455\tLoss: 12.039\n"
      ]
     }
    ],
