--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7720,7 +7720,15 @@
       "count: 378\tCoord: [-1.   0.8]\t\tAcc: 15.411931818181818\tLoss: 37.637\n",
       "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 19.886363636363637\tLoss: 21.63\n",
       "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 22.94034090909091\tLoss: 14.65\n",
-      "Coord: [-0.5  0.8]\tAcc: 35\tLoss: 12.514\r"
+      "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 26.420454545454547\tLoss: 10.945\n",
+      "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 33.23863636363637\tLoss: 9.073\n",
+      "count: 388\tCoord: [0.  0.8]\t\tAcc: 36.00852272727273\tLoss: 8.555\n",
+      "count: 390\tCoord: [0.2 0.8]\t\tAcc: 35.72443181818182\tLoss: 9.461\n",
+      "count: 392\tCoord: [0.4 0.8]\t\tAcc: 31.74715909090909\tLoss: 13.499\n",
+      "count: 394\tCoord: [0.6 0.8]\t\tAcc: 25.28409090909091\tLoss: 25.863\n",
+      "count: 396\tCoord: [0.8 0.8]\t\tAcc: 20.241477272727273\tLoss: 55.787\n",
+      "count: 398\tCoord: [1.  0.8]\t\tAcc: 15.411931818181818\tLoss: 142.502\n",
+      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 16.619318181818183\tLoss: 38.314\n"
      ]
     }
    ],
