--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7664,7 +7664,9 @@
       "count: 286\tCoord: [0.3 0.3]\t\tAcc: 69.67329545454545\tLoss: 2.456\n",
       "count: 288\tCoord: [0.5 0.3]\t\tAcc: 41.54829545454545\tLoss: 8.387\n",
       "count: 290\tCoord: [0.7 0.3]\t\tAcc: 20.454545454545453\tLoss: 22.251\n",
-      "count: 292\tCoord: [0.9 0.3]\t\tAcc: 11.150568181818182\tLoss: 44.157\n"
+      "count: 292\tCoord: [0.9 0.3]\t\tAcc: 11.150568181818182\tLoss: 44.157\n",
+      "count: 294\tCoord: [-1.   0.4]\t\tAcc: 17.755681818181817\tLoss: 33.355\n",
+      "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 30.96590909090909\tLoss: 17.2\n"
      ]
     }
    ],
