--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7632,7 +7632,12 @@
       "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 21.803977272727273\tLoss: 17.658\n",
       "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 30.46875\tLoss: 11.264\n",
       "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 35.72443181818182\tLoss: 9.382\n",
-      "count: 388\tCoord: [0.  0.8]\t\tAcc: 32.67045454545455\tLoss: 12.039\n"
+      "count: 388\tCoord: [0.  0.8]\t\tAcc: 32.67045454545455\tLoss: 12.039\n",
+      "count: 390\tCoord: [0.2 0.8]\t\tAcc: 23.579545454545453\tLoss: 18.117\n",
+      "count: 392\tCoord: [0.4 0.8]\t\tAcc: 15.553977272727273\tLoss: 26.988\n",
+      "count: 394\tCoord: [0.6 0.8]\t\tAcc: 11.576704545454545\tLoss: 45.327\n",
+      "count: 396\tCoord: [0.8 0.8]\t\tAcc: 9.588068181818182\tLoss: 88.146\n",
+      "Coord: [0.9 0.8]\tAcc: 11\tLoss: 127.683\r"
      ]
     }
    ],
