--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7666,7 +7666,10 @@
       "count: 290\tCoord: [0.7 0.3]\t\tAcc: 20.454545454545453\tLoss: 22.251\n",
       "count: 292\tCoord: [0.9 0.3]\t\tAcc: 11.150568181818182\tLoss: 44.157\n",
       "count: 294\tCoord: [-1.   0.4]\t\tAcc: 17.755681818181817\tLoss: 33.355\n",
-      "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 30.96590909090909\tLoss: 17.2\n"
+      "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 30.96590909090909\tLoss: 17.2\n",
+      "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 45.02840909090909\tLoss: 9.051\n",
+      "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 59.16193181818182\tLoss: 4.605\n",
+      "Coord: [-0.3  0.4]\tAcc: 90\tLoss: 2.989\r"
      ]
     }
    ],
