Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7669,7 +7669,9 @@
       "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 30.96590909090909\tLoss: 17.2\n",
       "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 45.02840909090909\tLoss: 9.051\n",
       "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 59.16193181818182\tLoss: 4.605\n",
-      "Coord: [-0.3  0.4]\tAcc: 90\tLoss: 2.989\r"
+      "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 71.51988636363636\tLoss: 2.331\n",
+      "count: 304\tCoord: [0.  0.4]\t\tAcc: 76.70454545454545\tLoss: 1.615\n",
+      "Coord: [0.1 0.4]\tAcc: 103\tLoss: 1.73\r"
      ]
     }
    ],
