--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7637,7 +7637,11 @@
       "count: 392\tCoord: [0.4 0.8]\t\tAcc: 15.553977272727273\tLoss: 26.988\n",
       "count: 394\tCoord: [0.6 0.8]\t\tAcc: 11.576704545454545\tLoss: 45.327\n",
       "count: 396\tCoord: [0.8 0.8]\t\tAcc: 9.588068181818182\tLoss: 88.146\n",
-      "Coord: [0.9 0.8]\tAcc: 11\tLoss: 127.683\r"
+      "count: 398\tCoord: [1.  0.8]\t\tAcc: 9.446022727272727\tLoss: 178.324\n",
+      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 12.073863636363637\tLoss: 50.869\n",
+      "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 16.619318181818183\tLoss: 28.433\n",
+      "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 22.088068181818183\tLoss: 17.791\n",
+      "Coord: [-0.4  0.9]\tAcc: 36\tLoss: 14.901\r"
      ]
     }
    ],
