Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7728,7 +7728,16 @@
       "count: 394\tCoord: [0.6 0.8]\t\tAcc: 25.28409090909091\tLoss: 25.863\n",
       "count: 396\tCoord: [0.8 0.8]\t\tAcc: 20.241477272727273\tLoss: 55.787\n",
       "count: 398\tCoord: [1.  0.8]\t\tAcc: 15.411931818181818\tLoss: 142.502\n",
-      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 16.619318181818183\tLoss: 38.314\n"
+      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 16.619318181818183\tLoss: 38.314\n",
+      "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 18.323863636363637\tLoss: 24.089\n",
+      "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 20.59659090909091\tLoss: 17.745\n",
+      "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 23.579545454545453\tLoss: 14.838\n",
+      "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 26.420454545454547\tLoss: 13.948\n",
+      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 29.19034090909091\tLoss: 14.066\n",
+      "count: 412\tCoord: [0.3 0.9]\t\tAcc: 27.62784090909091\tLoss: 16.578\n",
+      "count: 414\tCoord: [0.5 0.9]\t\tAcc: 24.928977272727273\tLoss: 26.811\n",
+      "count: 416\tCoord: [0.7 0.9]\t\tAcc: 20.59659090909091\tLoss: 51.122\n",
+      "Coord: [0.8 0.9]\tAcc: 27\tLoss: 77.392\r"
      ]
     }
    ],
