--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7671,7 +7671,9 @@
       "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 59.16193181818182\tLoss: 4.605\n",
       "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 71.51988636363636\tLoss: 2.331\n",
       "count: 304\tCoord: [0.  0.4]\t\tAcc: 76.70454545454545\tLoss: 1.615\n",
-      "Coord: [0.1 0.4]\tAcc: 103\tLoss: 1.73\r"
+      "count: 306\tCoord: [0.2 0.4]\t\tAcc: 68.39488636363636\tLoss: 2.669\n",
+      "count: 308\tCoord: [0.4 0.4]\t\tAcc: 45.38352272727273\tLoss: 7.26\n",
+      "Coord: [0.6 0.4]\tAcc: 34\tLoss: 17.935\r"
      ]
     }
    ],
