Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7641,7 +7641,11 @@
       "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 12.073863636363637\tLoss: 50.869\n",
       "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 16.619318181818183\tLoss: 28.433\n",
       "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 22.088068181818183\tLoss: 17.791\n",
-      "Coord: [-0.4  0.9]\tAcc: 36\tLoss: 14.901\r"
+      "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 28.480113636363637\tLoss: 13.436\n",
+      "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 26.988636363636363\tLoss: 15.557\n",
+      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 21.448863636363637\tLoss: 22.969\n",
+      "count: 412\tCoord: [0.3 0.9]\t\tAcc: 16.193181818181817\tLoss: 31.962\n",
+      "count: 414\tCoord: [0.5 0.9]\t\tAcc: 11.221590909090908\tLoss: 47.618\n"
      ]
     }
    ],
