--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7673,7 +7673,9 @@
       "count: 304\tCoord: [0.  0.4]\t\tAcc: 76.70454545454545\tLoss: 1.615\n",
       "count: 306\tCoord: [0.2 0.4]\t\tAcc: 68.39488636363636\tLoss: 2.669\n",
       "count: 308\tCoord: [0.4 0.4]\t\tAcc: 45.38352272727273\tLoss: 7.26\n",
-      "Coord: [0.6 0.4]\tAcc: 34\tLoss: 17.935\r"
+      "count: 310\tCoord: [0.6 0.4]\t\tAcc: 22.017045454545453\tLoss: 19.06\n",
+      "count: 312\tCoord: [0.8 0.4]\t\tAcc: 11.931818181818182\tLoss: 38.64\n",
+      "count: 314\tCoord: [1.  0.4]\t\tAcc: 9.943181818181818\tLoss: 63.816\n"
      ]
     }
    ],
