--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7675,7 +7675,10 @@
       "count: 308\tCoord: [0.4 0.4]\t\tAcc: 45.38352272727273\tLoss: 7.26\n",
       "count: 310\tCoord: [0.6 0.4]\t\tAcc: 22.017045454545453\tLoss: 19.06\n",
       "count: 312\tCoord: [0.8 0.4]\t\tAcc: 11.931818181818182\tLoss: 38.64\n",
-      "count: 314\tCoord: [1.  0.4]\t\tAcc: 9.943181818181818\tLoss: 63.816\n"
+      "count: 314\tCoord: [1.  0.4]\t\tAcc: 9.943181818181818\tLoss: 63.816\n",
+      "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 22.230113636363637\tLoss: 26.348\n",
+      "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 34.80113636363637\tLoss: 14.587\n",
+      "Coord: [-0.6  0.5]\tAcc: 63\tLoss: 10.281\r"
      ]
     }
    ],
