Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7645,7 +7645,12 @@
       "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 26.988636363636363\tLoss: 15.557\n",
       "count: 410\tCoord: [0.1 0.9]\t\tAcc: 21.448863636363637\tLoss: 22.969\n",
       "count: 412\tCoord: [0.3 0.9]\t\tAcc: 16.193181818181817\tLoss: 31.962\n",
-      "count: 414\tCoord: [0.5 0.9]\t\tAcc: 11.221590909090908\tLoss: 47.618\n"
+      "count: 414\tCoord: [0.5 0.9]\t\tAcc: 11.221590909090908\tLoss: 47.618\n",
+      "count: 416\tCoord: [0.7 0.9]\t\tAcc: 9.659090909090908\tLoss: 82.358\n",
+      "count: 418\tCoord: [0.9 0.9]\t\tAcc: 9.517045454545455\tLoss: 164.586\n",
+      "count: 420\tCoord: [-1.  1.]\t\tAcc: 10.9375\tLoss: 92.547\n",
+      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 14.630681818181818\tLoss: 46.065\n",
+      "Coord: [-0.7  1. ]\tAcc: 17\tLoss: 36.238\r"
      ]
     }
    ],
