--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -7737,7 +7737,15 @@
       "count: 412\tCoord: [0.3 0.9]\t\tAcc: 27.62784090909091\tLoss: 16.578\n",
       "count: 414\tCoord: [0.5 0.9]\t\tAcc: 24.928977272727273\tLoss: 26.811\n",
       "count: 416\tCoord: [0.7 0.9]\t\tAcc: 20.59659090909091\tLoss: 51.122\n",
-      "Coord: [0.8 0.9]\tAcc: 27\tLoss: 77.392\r"
+      "count: 418\tCoord: [0.9 0.9]\t\tAcc: 16.974431818181817\tLoss: 114.939\n",
+      "count: 420\tCoord: [-1.  1.]\t\tAcc: 13.28125\tLoss: 70.594\n",
+      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 15.767045454545455\tLoss: 43.108\n",
+      "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 18.039772727272727\tLoss: 29.342\n",
+      "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 18.25284090909091\tLoss: 23.389\n",
+      "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 19.460227272727273\tLoss: 21.712\n",
+      "count: 430\tCoord: [0. 1.]\t\tAcc: 20.667613636363637\tLoss: 21.936\n",
+      "count: 432\tCoord: [0.2 1. ]\t\tAcc: 22.301136363636363\tLoss: 24.443\n",
+      "count: 434\tCoord: [0.4 1. ]\t\tAcc: 21.946022727272727\tLoss: 32.642\n"
      ]
     }
    ],
