Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -7678,7 +7678,9 @@
       "count: 314\tCoord: [1.  0.4]\t\tAcc: 9.943181818181818\tLoss: 63.816\n",
       "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 22.230113636363637\tLoss: 26.348\n",
       "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 34.80113636363637\tLoss: 14.587\n",
-      "Coord: [-0.6  0.5]\tAcc: 63\tLoss: 10.281\r"
+      "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 46.875\tLoss: 8.344\n",
+      "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 55.96590909090909\tLoss: 5.135\n",
+      "Coord: [-0.2  0.5]\tAcc: 85\tLoss: 3.558\r"
      ]
     }
    ],
